[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'adao-runtime-wasm'
version = '1.0.0'
[dependencies.adao-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['adao-runtime/std']

[workspace]
members = []

[lib]
crate-type = ['cdylib']
[profile.release]
lto = true
panic = 'abort'
